import org.gradle.internal.os.OperatingSystem

group 'net.fexcraft.app.fmt'

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'application'

project.ext.lwjglVersion = "3.2.3"
project.ext.jomlVersion = "1.9.23"

switch(OperatingSystem.current()){
	case OperatingSystem.LINUX:
		def osArch = System.getProperty("os.arch")
		project.ext.lwjglNatives = osArch.startsWith("arm") || osArch.startsWith("aarch64")
			? "natives-linux-${osArch.contains("64") || osArch.startsWith("armv8") ? "arm64" : "arm32"}"
			: "natives-linux"
		break
	case OperatingSystem.MAC_OS:
		project.ext.lwjglNatives = "natives-macos"
		break
	case OperatingSystem.WINDOWS:
		project.ext.lwjglNatives = System.getProperty("os.arch").contains("64") ? "natives-windows" : "natives-windows-x86"
		break
}

version = '3.0.0'
sourceCompatibility = 15
targetCompatibility = 15
compileJava.options.encoding = 'UTF-8'

//@formatter:off
def log4j_version = '2.5'
def commons_version = '3.4'
def commons_collections = '4.1'
def guava_version = '19.0'
def gson_version = '2.7'
def legui_version = '3.3.1';

def joml_version = "1.9.25"//"-SNAPSHOT"
def lwjgl_version = "3.2.3"//'3.2.4-SNAPSHOT'
def le_cbchain = '1.0.0'
def le_util = '1.0.0'
//@formatter:on

//Make this project as a Gradle project
eclipse.project {
  	natures 'org.springsource.ide.eclipse.gradle.core.nature'
}

repositories {
    jcenter()
    mavenCentral()
    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
    maven { url "https://raw.githubusercontent.com/SpinyOwl/repo/snapshots" }
    maven { url "https://raw.githubusercontent.com/SpinyOwl/repo/releases" }
}

dependencies {
    // https://mvnrepository.com/artifact/org.reflections/reflections
    compile group: 'org.reflections', name: 'reflections', version: '0.9.11'

    //@formatter:off
    compile group: "org.joml", name: "joml", version: joml_version, changing: true
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: log4j_version, changing: false
    compile group: 'org.apache.commons', name: 'commons-lang3', version: commons_version, changing: false
    compile group: 'org.apache.commons', name: 'commons-collections4', version: commons_collections, changing: false
    compile group: 'com.google.guava', name: 'guava', version: guava_version, changing: false
    compile group: 'com.google.code.gson', name: 'gson', version: gson_version, changing: false

    compile group: 'org.liquidengine', name: 'cbchain', version: le_cbchain, changing: true
    compile group: 'org.liquidengine', name: 'leutil', version: le_util, changing: true
	compile group: 'org.liquidengine', name: 'legui', version: legui_version + '-SNAPSHOT', changing: true;

    compile group: 'org.lwjgl', name: 'lwjgl-stb', version: lwjgl_version, changing: true
    runtime group: 'org.lwjgl', name: 'lwjgl-stb', version: lwjgl_version, changing: true, classifier: 'natives-windows'
    runtime group: 'org.lwjgl', name: 'lwjgl-stb', version: lwjgl_version, changing: true, classifier: 'natives-linux'
    runtime group: 'org.lwjgl', name: 'lwjgl-stb', version: lwjgl_version, changing: true, classifier: 'natives-macos'

    compile group: 'org.lwjgl', name: 'lwjgl-glfw', version: lwjgl_version, changing: true
    runtime group: 'org.lwjgl', name: 'lwjgl-glfw', version: lwjgl_version, changing: true, classifier: 'natives-windows'
    runtime group: 'org.lwjgl', name: 'lwjgl-glfw', version: lwjgl_version, changing: true, classifier: 'natives-linux'
    runtime group: 'org.lwjgl', name: 'lwjgl-glfw', version: lwjgl_version, changing: true, classifier: 'natives-macos'

    compile group: 'org.lwjgl', name: 'lwjgl-nanovg', version: lwjgl_version, changing: true
    runtime group: 'org.lwjgl', name: 'lwjgl-nanovg', version: lwjgl_version, changing: true, classifier: 'natives-windows'
    runtime group: 'org.lwjgl', name: 'lwjgl-nanovg', version: lwjgl_version, changing: true, classifier: 'natives-linux'
    runtime group: 'org.lwjgl', name: 'lwjgl-nanovg', version: lwjgl_version, changing: true, classifier: 'natives-macos'

    compile group: 'org.lwjgl', name: 'lwjgl-opengl', version: lwjgl_version, changing: true
    compile group: 'org.lwjgl', name: 'lwjgl-opengl', version: lwjgl_version, changing: true, classifier: 'natives-windows'
    compile group: 'org.lwjgl', name: 'lwjgl-opengl', version: lwjgl_version, changing: true, classifier: 'natives-linux'
    compile group: 'org.lwjgl', name: 'lwjgl-opengl', version: lwjgl_version, changing: true, classifier: 'natives-macos'

    compile group: 'org.lwjgl', name: 'lwjgl', version: lwjgl_version, changing: true
    runtime group: 'org.lwjgl', name: 'lwjgl', version: lwjgl_version, changing: true, classifier: 'natives-windows'
    runtime group: 'org.lwjgl', name: 'lwjgl', version: lwjgl_version, changing: true, classifier: 'natives-linux'
    runtime group: 'org.lwjgl', name: 'lwjgl', version: lwjgl_version, changing: true, classifier: 'natives-macos'

    compile group: 'org.lwjgl', name: 'lwjgl-yoga', version: lwjgl_version, changing: true
    runtime group: 'org.lwjgl', name: 'lwjgl-yoga', version: lwjgl_version, changing: true, classifier: 'natives-windows'
    runtime group: 'org.lwjgl', name: 'lwjgl-yoga', version: lwjgl_version, changing: true, classifier: 'natives-linux'
    runtime group: 'org.lwjgl', name: 'lwjgl-yoga', version: lwjgl_version, changing: true, classifier: 'natives-macos'
    
    compile group: 'org.lwjgl', name: 'lwjgl-tinyfd', version: lwjgl_version, changing: true
    runtime group: 'org.lwjgl', name: 'lwjgl-tinyfd', version: lwjgl_version, changing: true, classifier: 'natives-windows'
    runtime group: 'org.lwjgl', name: 'lwjgl-tinyfd', version: lwjgl_version, changing: true, classifier: 'natives-linux'
    runtime group: 'org.lwjgl', name: 'lwjgl-tinyfd', version: lwjgl_version, changing: true, classifier: 'natives-macos'
    
    compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.7', changing: true
    runtime group: 'org.codehaus.groovy', name: 'groovy-all', version: '3.0.7', changing: true
    
    runtime files('libs/discord-rpc.jar', 'libs/VOXtoFMT-1.jar')
    //@formatter:on
    testCompile group: 'junit', name: 'junit', version: '4.11'
}

sourceSets {
    main {
        java {
            srcDirs 'src'
        }
        resources {
        	srcDirs 'resources'
        	srcDirs 'scripts'
        }
    }
 }
 
 mainClassName = 'net.fexcraft.app.fmt.FMT'
